# pkg/openapi/special-backend.swagger.json
@@ -588,7 +588,7 @@
           "format": "int32"
         },
         "picture": {
-          "$ref": "#/definitions/special_app_v1PictureInfo"
+          "type": "string"
         }
       }
     },
@@ -623,8 +623,7 @@
         "pictures": {
           "type": "array",
           "items": {
-            "type": "object",
-            "$ref": "#/definitions/special_app_v1PictureInfo"
+            "type": "string"
           }
         }
       }
@@ -672,8 +671,7 @@
         "pictures": {
           "type": "array",
           "items": {
-            "type": "object",
-            "$ref": "#/definitions/special_app_v1PictureInfo"
+            "type": "string"
           }
         }
       }
@@ -781,7 +779,7 @@
           "format": "date-time"
         },
         "picture": {
-          "$ref": "#/definitions/special_app_v1PictureInfo"
+          "type": "string"
         }
       }
     },
@@ -840,7 +838,7 @@
           "format": "int32"
         },
         "picture": {
-          "$ref": "#/definitions/special_app_v1PictureInfo"
+          "type": "string"
         }
       }
     },
@@ -900,18 +898,6 @@
           "format": "int32"
         },
         "picture": {
-          "$ref": "#/definitions/special_app_v1PictureInfo"
-        }
-      }
-    },
-    "special_app_v1PictureInfo": {
-      "type": "object",
-      "properties": {
-        "picture": {
-          "type": "string",
-          "format": "byte"
-        },
-        "mimeType": {
           "type": "string"
         }
       }
@@ -941,7 +927,7 @@
           "format": "date-time"
         },
         "picture": {
-          "$ref": "#/definitions/special_app_v1PictureInfo"
+          "type": "string"
         }
       }
     }
